# C_MachineLearning

C_Logistic_Regression/: CMakeLists.txt  data.c  data.h  gradient_decent.c  gradient_decent.h  logistic_regression.c  logistic_regression.h  test_dataloader.c
C_Logistic_Regression/data/: mnist_test_filtered.csv
C_Logistic_Regression/function_on_matrix/: activation.c  activation.h  loss_funciton.c  loss_function.h
C_Logistic_Regression/matrix_calculation/: matrix.h  matrix_linear.c  matrix_linear.h  matrix_multiply.c  matrix_multiply.h  matrix_transpose.c  matrix_transpose.h  test_matmul.c  test_transpose.c
